[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gapfill"
version = "0.1.0"
description = "Gap filling pipeline for genome assemblies with HiFi/ONT reads"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "GapFill Team"}
]
keywords = ["bioinformatics", "genome", "assembly", "gap-filling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "biopython>=1.79",
    "pysam>=0.19.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
full = [
    "pyfaidx>=0.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
gapfill = "gapfill.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/gapfill"
Documentation = "https://github.com/yourusername/gapfill#readme"
Repository = "https://github.com/yourusername/gapfill"

[tool.setuptools]
packages = ["gapfill", "gapfill.core", "gapfill.engines", "gapfill.utils"]

[tool.setuptools.package-data]
"*" = ["*.md"]
